# dejavy

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/utils/: frontend.rs  image.rs  mod.rs
src/components/: NestedList.vue  NestedListItems.vue
src/layouts/default/: Default.vue  MainLayout.vue  SideBarLayout.vue
src/plugins/: index.ts  store.ts  vuetify.ts
src/router/: index.ts
src/src/: App.vue
src/src/components/: Logo.vue  NestedList.vue
src/src/layouts/default/: Default.vue  MainLayout.vue
src/src/views/: Home.vue
src/stores/: identifiedDuplicatesStore.ts  selectedDirectoryStore.ts  selectedImagesStore.ts
src/views/: Home.vue
